// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoinItem test Default item snapshot 1`] = `
<tr
  data-testid="tr"
>
  <td>
    1
  </td>
  <td
    class="imgTd"
  >
    <img
      alt="Not found"
      src="https://assets.coincap.io/assets/icons/btc@2x.png"
    />
    BTC
  </td>
  <td>
    $21,000.23
  </td>
  <td>
    $32,131,412,123.23
  </td>
  <td
    data-testid="percent"
    style="color: green;"
  >
    0.24%
  </td>
  <td
    class="btnTd"
  >
    <button
      class="addButton"
    >
      ADD
    </button>
  </td>
</tr>
`;

exports[`CoinItem test Empty item test snapshot 1`] = `null`;

exports[`CoinItem test Percent must be black 1`] = `
<td
  data-testid="percent"
  style="color: black;"
>
  0%
</td>
`;

exports[`CoinItem test Percent must be green 1`] = `
<td
  data-testid="percent"
  style="color: green;"
>
  0.24%
</td>
`;

exports[`CoinItem test Percent must be red 1`] = `
<td
  data-testid="percent"
  style="color: red;"
>
  -0.24%
</td>
`;
